# routes/index.js
@@ -1,7 +1,7 @@
-const router = require('express').Router();
+const router = require('express').Router()
 
-router.use('/', require('./swagger'));
-router.get('/', (req, res) => { res.send('Hello World');});
-router.use('/users', require('./users'));
+router.use('/', require('./swagger'))
+router.get('/', (req, res) => { res.send('Hello World')})
+router.use('/programmers', require('./programmers'))
 
-module.exports = router;
+module.exports = router
